# procure-to-pay

./: Dockerfile  Dockerfile.dev  README.md  docker-compose.dev.yml  docker-compose.yml  manage.py  pyproject.toml
backend/: .env.example  settings.py  urls.py
backend/apps/documents/processors/: proforma_processor.py  receipt_validator.py
backend/apps/purchases/: api.py  models.py  permissions.py  serializers.py  services.py  urls.py
backend/apps/purchases/migrations/: 0001_initial.py  0002_purchaseorder.py  0003_purchaseorder_po_data_file.py
backend/apps/users/: api.py  models.py  serializers.py  urls.py
backend/apps/users/migrations/: 0001_initial.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/components/: Layout.jsx  RequestList.jsx
frontend/src/contexts/: AuthContext.jsx
frontend/src/pages/: CreateRequest.jsx  Dashboard.jsx  EditRequest.jsx  Login.jsx  Register.jsx  RequestDetail.jsx
frontend/src/services/: api.js
nginx/: nginx.conf
