[tool.poetry]
name = "procure-to-pay"
version = "0.1.0"
description = ""
authors = ["Tuyisenge Jordan <jordanale.112@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = "<5"
psycopg2-binary = "<2.9.11"
python-decouple = "^3.8"
djangorestframework = "<3.15"
djangorestframework-simplejwt = "<5"
django-cors-headers = "<4"
pillow = "<10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
